--- a/Projeto Slither Bots/manifest.json
+++ b/Projeto Slither Bots/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
-	"name": "SnakeyRain - When it rains, it pours!",
-	"version": "4.4",
+	"name": "Brunex Bots",
+	"version": "2.0",
 	"description": "Control botstorms in slither.io while using the NTL mod.",
 	"icons": {
 		"16": "icons/icon16.png",
